// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders "Show More" link 1`] = `
<div>
  <h2
    className="menu-header no-margin"
    id="qualifiers.TRK"
  >
    qualifiers.TRK
  </h2>
  <ul
    aria-labelledby="qualifiers.TRK"
    className="menu"
    key="header-TRK"
  >
    <span
      key="foo"
    >
      foo
    </span>
    <span
      key="bar"
    >
      bar
    </span>
    <SearchShowMore
      allowMore={true}
      key="more-TRK"
      onMoreClick={[MockFunction]}
      onSelect={[MockFunction]}
      qualifier="TRK"
      selected={false}
    />
  </ul>
</div>
`;

exports[`renders different components and dividers between them 1`] = `
<div>
  <h2
    className="menu-header no-margin"
    id="qualifiers.FIL"
  >
    qualifiers.FIL
  </h2>
  <ul
    aria-labelledby="qualifiers.FIL"
    className="menu"
    key="header-FIL"
  >
    <span
      key="zux"
    >
      zux
    </span>
  </ul>
  <h2
    className="menu-header no-margin"
    id="qualifiers.TRK"
  >
    qualifiers.TRK
  </h2>
  <ul
    aria-labelledby="qualifiers.TRK"
    className="menu"
    key="header-TRK"
  >
    <span
      key="foo"
    >
      foo
    </span>
    <span
      key="bar"
    >
      bar
    </span>
  </ul>
</div>
`;

exports[`should render no results 1`] = `
<div
  id="no-results"
/>
`;
